2021-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/utility.c (TranslateTextEx): If image resolution is
        impossibly small, then report the default resolution of 72 DPI, or
        the equivalent in centimeters if units is in
        pixels-per-centimeter.  Addresses SourceForge bug #396 "dpi not
        retrived (no default value)".  I do have some misgivings about
        this solution since it is lying about the actual value.  Not all
        usages of raster images have an associated physical reality and
        thus resolution is not necessarily relevant.

2021-02-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/tiff.c, coders/ps2.c, coders/ps3.c: Libtiff versions
        beyond 20201219 want to use types from stdint.h.

2021-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/monitor.c (MagickMonitorActive): Need to export this
        function for use by modules.

2021-01-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * VisualMagick/bin: Remove hp2xx.exe, mpeg2dec.exe, and
        mpeg2enc.exe.  There is no value to distributing these pre-built
        and flimsy executables in the source package.

        * filters/analyze.c (AnalyzeImage): Add OpenMP speed-ups.

2021-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * filters/analyze.c (AnalyzeImage): Tidy the structure of the code
        a bit.

        * magick/module.c (ExecuteModuleProcess): Add error reporting for
        the case that the expected symbol is not resolved.

2021-01-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * configure.ac: Remove updates to use recommended forms of AC_INIT
        and AM_INIT_AUTOMAKE.  There were too many annoying side-effects
        to daily development from these changes.  Perhaps they will be
        re-visited if solutions for Autotools regeneration issues are
        found.

2021-01-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
