@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020210206"
-#define public MagickPackageReleaseDate "snapshot-20210206"
+#define public MagickPackageVersionAddendum ".020210207"
+#define public MagickPackageReleaseDate "snapshot-20210207"
