@@ -1,3 +1,8 @@
+2021-02-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * magick/utility.c (MagickDoubleToLong): Guard against LONG_MAX
+        not directly representable as a double.
+
 2021-02-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * magick/utility.c (TranslateTextEx): If image resolution is
